--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
   material_color_utilities: ^0.1.5
   universal_platform: ^1.0.0+1
   url_launcher: ^6.1.7
+  firebase_auth: ^4.2.5
+  firebase_core: ^2.4.1
+  firebase_ui_auth: ^1.1.9
+  firebase_ui_oauth_google: ^1.0.16
 
 dev_dependencies:
   build_runner: ^2.3.3
